--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Module-Starter-Plugin-CGIApp
 
+0.21    Wed Mar  3 15:28:02 EST 2010
+        Fixed test failures on Windows (and possibly other platforms with
+        disgusting perverted non-unixy line endings.)
+        
+        Upped the recommended perl version to 5.008.
+
 0.20    Sun Feb 28 14:02:44 EST 2010
         t/test-app.t in generated dists now passes an object to $mech->app
         to match what is done is server.pl
